[package]
name = "os_rust_build"
version = "0.1.0"
edition = "2024"

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic
[[bin]]
name = "rs_os"
test = false // make rust-analyzer happy by disable cargo check
bench = false


[dependencies]
